k8s-local/manifests/elasticsearch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: demo
spec:
  selector:
    app: elasticsearch
  ports:
    - name: http
      port: 9200
      targetPort: 9200
    - name: transport
      port: 9300
      targetPort: 9300
